# Hormone-Optimizer

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LEARNINGS.md  LICENSE  Makefile  README.md  index.html  vite.config.js
.github/workflows/: ci.yml
data/synthetic/: testosterone_synthetic.csv
frontend/: package-lock.json  package.json
frontend/analyzer/: index.html
frontend/src/: App.jsx
python/: pyproject.toml
python/notebooks/: 01_problem_framing.ipynb
python/tests/: test_smoke.py
src/: App.jsx  main.jsx
